# elkm1

./: .gitignore  CHANGELOG.md  LICENCE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  example.py  foo.py  mypy.ini  pyproject.toml  setup.py  tt.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  code-quality2.yml  publish-package.yml
elkm1/: __init__.py  __version__.py  areas.py  const.py  counters.py  elements.py  elk.py  keypads.py  lights.py  message.py  outputs.py  panel.py  proto.py  settings.py  tasks.py  thermostats.py  users.py  util.py  zones.py
elkm1_lib/: __init__.py  __version__.py  areas.py  connection.py  const.py  counters.py  discovery.py  elements.py  elk.py  events.py  keypads.py  lights.py  message.py  notify.py  outputs.py  panel.py  proto.py  settings.py  tasks.py  thermostats.py  users.py  util.py  zones.py
examples/: aioscanner.py  simple_program.py
test/: conftest.py  test_area.py  test_connection.py  test_discovery.py  test_message.py  test_notify.py  test_panel.py  test_proto.py  test_setting.py  test_thermostat.py  test_util.py  test_zone.py  util.py
